-Added multiple locations per job -Fixed alignment errors -Removed last job/education horizontal rules -Fixed html doctype version error -Updated pdf

--- a/resume.css
+++ b/resume.css
@@ -72,7 +72,7 @@ fieldset:nth-child(2n) legend {
 }
 
 h1, h2, h3, h4 {
-	margin-top: 5px;
-	margin-bottom: 5px;
+	margin-top: 3px;
+	margin-bottom: 3px;
 	text-align: center;
 }
